--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- <link rel="icon" href="/images/code4each_fav.png"> -->
+  <link rel = "icon" href = "images/speedy-fav.png" type = "image/x-icon">
   <link rel="icon" href="data:," type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap CSS -->
