--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.0/anime.min.js"></script>
   <script src="https://unpkg.com/vue@3"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 </body>
 
